# isucon12-qualify-try

./: README.md
ansible/: ansible.cfg  inventory.yaml  web.yaml
ansible/roles/web/handlers/: main.yaml
ansible/roles/web/tasks/: deploy.yaml  switch.yaml
webapp/rust/: Cargo.toml  Dockerfile
webapp/rust/src/: main.rs
webapp/rust/src/utils/: db.rs
webapp/sql/: init.sql
